# jet_playground

./: .gitignore  ABOUT.md  CMakeLists.txt  README.md
cmake/: FindFastJet.cmake  FindPythia8.cmake  FindStarJetPico.cmake
jet_playground/: CMakeLists.txt
jet_playground/jetfinding/: CMakeLists.txt  base.hh  dummy_tower_list.txt  event.cc  event.hh  geant_reader.cc  geant_reader.hh  geant_reader.in.cc  process_geant.cc  process_geant.in.cc
jet_playground/models/: CMakeLists.txt  readTree.in.py  test_models.in.py  tools.in.py  train_forest.in.py  train_kn.in.py  train_linear.in.py  train_models.in.py  train_nn.in.py  train_tree.in.py  transforms.in.py
jet_playground/settings/: CMakeLists.txt  full_geant_single_pass.in.csh  grid_train_all_models.in.csh  models.in.txt  reader.in.txt  wsu_grid_geant.list
jet_playground/test/: CMakeLists.txt  configure_test.cc  configure_test.cc.in  fastjet_test.cc  init_test.cc  root_test.cc  tstar_test.cc
